What's new in thtk 2:

* thdat: A bug which made compression for TH07 fail has been
  fixed.
* thdat: Extraction can now use parallel execution.
* thdat: Compression efficiency has been improved beyond
  that of the official archives.
* thdat: Compression times have been reduced by about 40%.
* thecl: The version option must now be specified for
  compilation and dumping.
* thecl: The syntax for the difficulty mask has been changed.
* thecl: Parse stack-based expressions for games other than
  TH10.
* thecl: New type-specific operators have been added which
  take values of any kind and give back a value of the kind
  specified by the operator.  $+ is an addition returning an
  integer value, while %+ is an addition returning a
  floating-point value.  In case the generic operator is
  used (+), the return value depends on the value passed to
  it:  If both are integer, the return value is integer as
  well, if any is floating, the return value is floating.